[gd_scene load_steps=3 format=3 uid="uid://bdn4bm27nbqsy"]

[ext_resource type="Script" uid="uid://bvmw1j8kf6y2u" path="res://networking/client/ClientUI.gd" id="1_client_ui"]
[ext_resource type="Script" uid="uid://dpq7hvj5ksw6j" path="res://networking/client/ClientConnection.gd" id="2_client_connection"]

[node name="ClientUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_client_ui")

[node name="ClientConnection" type="Node" parent="."]
script = ExtResource("2_client_connection")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.18, 1)

[node name="ConnectionPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 280.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ConnectionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="ConnectionPanel/VBoxContainer"]
layout_mode = 2
text = "Connect to Server"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ConnectionPanel/VBoxContainer"]
layout_mode = 2

[node name="AddressContainer" type="VBoxContainer" parent="ConnectionPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="AddressLabel" type="Label" parent="ConnectionPanel/VBoxContainer/AddressContainer"]
layout_mode = 2
text = "Server Address:"

[node name="AddressInput" type="LineEdit" parent="ConnectionPanel/VBoxContainer/AddressContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "127.0.0.1"

[node name="PortContainer" type="VBoxContainer" parent="ConnectionPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="PortLabel" type="Label" parent="ConnectionPanel/VBoxContainer/PortContainer"]
layout_mode = 2
text = "Port:"

[node name="PortInput" type="LineEdit" parent="ConnectionPanel/VBoxContainer/PortContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "7777"

[node name="ConnectButton" type="Button" parent="ConnectionPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Connect"

[node name="HSeparator2" type="HSeparator" parent="ConnectionPanel/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="ConnectionPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Not connected"
horizontal_alignment = 1
autowrap_mode = 3

[node name="PlayerListPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 240.0
offset_bottom = 340.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerListPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="PlayerListPanel/VBoxContainer"]
layout_mode = 2
text = "Connected Players"
horizontal_alignment = 1

[node name="DisconnectButton" type="Button" parent="PlayerListPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Disconnect"

[node name="HSeparator" type="HSeparator" parent="PlayerListPanel/VBoxContainer"]
layout_mode = 2

[node name="PlayerList" type="ItemList" parent="PlayerListPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
